// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrossSellTile component should render large and fullscreen 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
        style="width: 100%;"
      >
        <a
          class="tilecontainer"
          href="https://www.bbc.co.uk"
          style="border-radius: 20px;"
        >
          <div
            class="gradiantoverlay"
            style="border-radius: 20px;"
          >
            <div
              class="topwrapper"
            >
              <img
                alt="crosssell-image"
                class="imagecontainer"
                src="https://picsum.photos/536/354"
                style="border-radius: 20px;"
              />
            </div>
            <div
              class="bottomwrapper"
            >
              <div
                class="textwrapper"
                style="color: white; font-size: 6vw;"
              >
                Buy One - Get One Free!
              </div>
              <div
                class="textwrapper"
                style="color: white; font-size: 3.96vw;"
              >
                An offer you don't want to miss
              </div>
              <div
                class="textwrapper"
                style="color: white; font-size: 3vw;"
              >
                limited time offer that is applicable to monkeys only. Do not apply if you are green or over 300
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
      style="width: 100%;"
    >
      <a
        class="tilecontainer"
        href="https://www.bbc.co.uk"
        style="border-radius: 20px;"
      >
        <div
          class="gradiantoverlay"
          style="border-radius: 20px;"
        >
          <div
            class="topwrapper"
          >
            <img
              alt="crosssell-image"
              class="imagecontainer"
              src="https://picsum.photos/536/354"
              style="border-radius: 20px;"
            />
          </div>
          <div
            class="bottomwrapper"
          >
            <div
              class="textwrapper"
              style="color: white; font-size: 6vw;"
            >
              Buy One - Get One Free!
            </div>
            <div
              class="textwrapper"
              style="color: white; font-size: 3.96vw;"
            >
              An offer you don't want to miss
            </div>
            <div
              class="textwrapper"
              style="color: white; font-size: 3vw;"
            >
              limited time offer that is applicable to monkeys only. Do not apply if you are green or over 300
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CrossSellTile component should render large and square 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
        style="width: 100%;"
      >
        <a
          class="tilecontainer"
          href="https://www.bbc.co.uk"
          style="border-radius: 20px;"
        >
          <div
            class="gradiantoverlay"
            style="border-radius: 20px;"
          >
            <div
              class="topwrapper"
            >
              <img
                alt="crosssell-image"
                class="imagecontainer"
                src="https://picsum.photos/536/354"
                style="border-radius: 20px;"
              />
            </div>
            <div
              class="bottomwrapper"
            >
              <div
                class="textwrapper"
                style="color: white; font-size: 6vw;"
              >
                Buy One - Get One Free!
              </div>
              <div
                class="textwrapper"
                style="color: white; font-size: 3.96vw;"
              >
                An offer you don't want to miss
              </div>
              <div
                class="textwrapper"
                style="color: white; font-size: 3vw;"
              >
                limited time offer that is applicable to monkeys only. Do not apply if you are green or over 300
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
      style="width: 100%;"
    >
      <a
        class="tilecontainer"
        href="https://www.bbc.co.uk"
        style="border-radius: 20px;"
      >
        <div
          class="gradiantoverlay"
          style="border-radius: 20px;"
        >
          <div
            class="topwrapper"
          >
            <img
              alt="crosssell-image"
              class="imagecontainer"
              src="https://picsum.photos/536/354"
              style="border-radius: 20px;"
            />
          </div>
          <div
            class="bottomwrapper"
          >
            <div
              class="textwrapper"
              style="color: white; font-size: 6vw;"
            >
              Buy One - Get One Free!
            </div>
            <div
              class="textwrapper"
              style="color: white; font-size: 3.96vw;"
            >
              An offer you don't want to miss
            </div>
            <div
              class="textwrapper"
              style="color: white; font-size: 3vw;"
            >
              limited time offer that is applicable to monkeys only. Do not apply if you are green or over 300
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CrossSellTile component should render large and widescreen 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
        style="width: 100%;"
      >
        <a
          class="tilecontainer"
          href="https://www.bbc.co.uk"
          style="border-radius: 20px;"
        >
          <div
            class="gradiantoverlay"
            style="border-radius: 20px;"
          >
            <div
              class="topwrapper"
            >
              <img
                alt="crosssell-image"
                class="imagecontainer"
                src="https://picsum.photos/536/354"
                style="border-radius: 20px;"
              />
            </div>
            <div
              class="bottomwrapper"
            >
              <div
                class="textwrapper"
                style="color: white; font-size: 6vw;"
              >
                Buy One - Get One Free!
              </div>
              <div
                class="textwrapper"
                style="color: white; font-size: 3.96vw;"
              >
                An offer you don't want to miss
              </div>
              <div
                class="textwrapper"
                style="color: white; font-size: 3vw;"
              >
                limited time offer that is applicable to monkeys only. Do not apply if you are green or over 300
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
      style="width: 100%;"
    >
      <a
        class="tilecontainer"
        href="https://www.bbc.co.uk"
        style="border-radius: 20px;"
      >
        <div
          class="gradiantoverlay"
          style="border-radius: 20px;"
        >
          <div
            class="topwrapper"
          >
            <img
              alt="crosssell-image"
              class="imagecontainer"
              src="https://picsum.photos/536/354"
              style="border-radius: 20px;"
            />
          </div>
          <div
            class="bottomwrapper"
          >
            <div
              class="textwrapper"
              style="color: white; font-size: 6vw;"
            >
              Buy One - Get One Free!
            </div>
            <div
              class="textwrapper"
              style="color: white; font-size: 3.96vw;"
            >
              An offer you don't want to miss
            </div>
            <div
              class="textwrapper"
              style="color: white; font-size: 3vw;"
            >
              limited time offer that is applicable to monkeys only. Do not apply if you are green or over 300
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CrossSellTile component should render medium and fullscreen 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
        style="width: 66%;"
      >
        <a
          class="tilecontainer"
          href="https://www.bbc.co.uk"
          style="border-radius: 10px;"
        >
          <div
            class="gradiantoverlay"
            style="border-radius: 10px;"
          >
            <div
              class="topwrapper"
            >
              <img
                alt="crosssell-image"
                class="imagecontainer"
                src="https://picsum.photos/536/354"
                style="border-radius: 10px;"
              />
            </div>
            <div
              class="bottomwrapper"
            >
              <div
                class="textwrapper"
                style="color: white; font-size: 4vw;"
              >
                Buy One - Get One Free!
              </div>
              <div
                class="textwrapper"
                style="color: white; font-size: 2.64vw;"
              >
                An offer you don't want to miss
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
      style="width: 66%;"
    >
      <a
        class="tilecontainer"
        href="https://www.bbc.co.uk"
        style="border-radius: 10px;"
      >
        <div
          class="gradiantoverlay"
          style="border-radius: 10px;"
        >
          <div
            class="topwrapper"
          >
            <img
              alt="crosssell-image"
              class="imagecontainer"
              src="https://picsum.photos/536/354"
              style="border-radius: 10px;"
            />
          </div>
          <div
            class="bottomwrapper"
          >
            <div
              class="textwrapper"
              style="color: white; font-size: 4vw;"
            >
              Buy One - Get One Free!
            </div>
            <div
              class="textwrapper"
              style="color: white; font-size: 2.64vw;"
            >
              An offer you don't want to miss
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CrossSellTile component should render medium and square 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
        style="width: 66%;"
      >
        <a
          class="tilecontainer"
          href="https://www.bbc.co.uk"
          style="border-radius: 10px;"
        >
          <div
            class="gradiantoverlay"
            style="border-radius: 10px;"
          >
            <div
              class="topwrapper"
            >
              <img
                alt="crosssell-image"
                class="imagecontainer"
                src="https://picsum.photos/536/354"
                style="border-radius: 10px;"
              />
            </div>
            <div
              class="bottomwrapper"
            >
              <div
                class="textwrapper"
                style="color: white; font-size: 4vw;"
              >
                Buy One - Get One Free!
              </div>
              <div
                class="textwrapper"
                style="color: white; font-size: 2.64vw;"
              >
                An offer you don't want to miss
              </div>
              <div
                class="textwrapper"
                style="color: white; font-size: 2vw;"
              >
                limited time offer that is applicable to monkeys only. Do not apply if you are green or over 300
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
      style="width: 66%;"
    >
      <a
        class="tilecontainer"
        href="https://www.bbc.co.uk"
        style="border-radius: 10px;"
      >
        <div
          class="gradiantoverlay"
          style="border-radius: 10px;"
        >
          <div
            class="topwrapper"
          >
            <img
              alt="crosssell-image"
              class="imagecontainer"
              src="https://picsum.photos/536/354"
              style="border-radius: 10px;"
            />
          </div>
          <div
            class="bottomwrapper"
          >
            <div
              class="textwrapper"
              style="color: white; font-size: 4vw;"
            >
              Buy One - Get One Free!
            </div>
            <div
              class="textwrapper"
              style="color: white; font-size: 2.64vw;"
            >
              An offer you don't want to miss
            </div>
            <div
              class="textwrapper"
              style="color: white; font-size: 2vw;"
            >
              limited time offer that is applicable to monkeys only. Do not apply if you are green or over 300
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CrossSellTile component should render medium and widescreen 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
        style="width: 66%;"
      >
        <a
          class="tilecontainer"
          href="https://www.bbc.co.uk"
          style="border-radius: 10px;"
        >
          <div
            class="gradiantoverlay"
            style="border-radius: 10px;"
          >
            <div
              class="topwrapper"
            >
              <img
                alt="crosssell-image"
                class="imagecontainer"
                src="https://picsum.photos/536/354"
                style="border-radius: 10px;"
              />
            </div>
            <div
              class="bottomwrapper"
            >
              <div
                class="textwrapper"
                style="color: white; font-size: 4vw;"
              >
                Buy One - Get One Free!
              </div>
              <div
                class="textwrapper"
                style="color: white; font-size: 2.64vw;"
              >
                An offer you don't want to miss
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
      style="width: 66%;"
    >
      <a
        class="tilecontainer"
        href="https://www.bbc.co.uk"
        style="border-radius: 10px;"
      >
        <div
          class="gradiantoverlay"
          style="border-radius: 10px;"
        >
          <div
            class="topwrapper"
          >
            <img
              alt="crosssell-image"
              class="imagecontainer"
              src="https://picsum.photos/536/354"
              style="border-radius: 10px;"
            />
          </div>
          <div
            class="bottomwrapper"
          >
            <div
              class="textwrapper"
              style="color: white; font-size: 4vw;"
            >
              Buy One - Get One Free!
            </div>
            <div
              class="textwrapper"
              style="color: white; font-size: 2.64vw;"
            >
              An offer you don't want to miss
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CrossSellTile component should render small and fullscreen 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
        style="width: 33%;"
      >
        <a
          class="tilecontainer"
          href="https://www.bbc.co.uk"
          style="border-radius: 4px;"
        >
          <div
            class="gradiantoverlay"
            style="border-radius: 4px;"
          >
            <div
              class="topwrapper"
            >
              <img
                alt="crosssell-image"
                class="imagecontainer"
                src="https://picsum.photos/536/354"
                style="border-radius: 4px;"
              />
            </div>
            <div
              class="bottomwrapper"
            >
              <div
                class="textwrapper"
                style="color: white; font-size: 3vw;"
              >
                Buy One - Get One Free!
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
      style="width: 33%;"
    >
      <a
        class="tilecontainer"
        href="https://www.bbc.co.uk"
        style="border-radius: 4px;"
      >
        <div
          class="gradiantoverlay"
          style="border-radius: 4px;"
        >
          <div
            class="topwrapper"
          >
            <img
              alt="crosssell-image"
              class="imagecontainer"
              src="https://picsum.photos/536/354"
              style="border-radius: 4px;"
            />
          </div>
          <div
            class="bottomwrapper"
          >
            <div
              class="textwrapper"
              style="color: white; font-size: 3vw;"
            >
              Buy One - Get One Free!
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CrossSellTile component should render small and square 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
        style="width: 33%;"
      >
        <a
          class="tilecontainer"
          href="https://www.bbc.co.uk"
          style="border-radius: 4px;"
        >
          <div
            class="gradiantoverlay"
            style="border-radius: 4px;"
          >
            <div
              class="topwrapper"
            >
              <img
                alt="crosssell-image"
                class="imagecontainer"
                src="https://picsum.photos/536/354"
                style="border-radius: 4px;"
              />
            </div>
            <div
              class="bottomwrapper"
            >
              <div
                class="textwrapper"
                style="color: white; font-size: 3vw;"
              >
                Buy One - Get One Free!
              </div>
              <div
                class="textwrapper"
                style="color: white; font-size: 1.5vw;"
              >
                limited time offer that is applicable to monkeys only. Do not apply if you are green or over 300
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
      style="width: 33%;"
    >
      <a
        class="tilecontainer"
        href="https://www.bbc.co.uk"
        style="border-radius: 4px;"
      >
        <div
          class="gradiantoverlay"
          style="border-radius: 4px;"
        >
          <div
            class="topwrapper"
          >
            <img
              alt="crosssell-image"
              class="imagecontainer"
              src="https://picsum.photos/536/354"
              style="border-radius: 4px;"
            />
          </div>
          <div
            class="bottomwrapper"
          >
            <div
              class="textwrapper"
              style="color: white; font-size: 3vw;"
            >
              Buy One - Get One Free!
            </div>
            <div
              class="textwrapper"
              style="color: white; font-size: 1.5vw;"
            >
              limited time offer that is applicable to monkeys only. Do not apply if you are green or over 300
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CrossSellTile component should render small and widescreen 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
        style="width: 33%;"
      >
        <a
          class="tilecontainer"
          href="https://www.bbc.co.uk"
          style="border-radius: 4px;"
        >
          <div
            class="gradiantoverlay"
            style="border-radius: 4px;"
          >
            <div
              class="topwrapper"
            >
              <img
                alt="crosssell-image"
                class="imagecontainer"
                src="https://picsum.photos/536/354"
                style="border-radius: 4px;"
              />
            </div>
            <div
              class="bottomwrapper"
            >
              <div
                class="textwrapper"
                style="color: white; font-size: 3vw;"
              >
                Buy One - Get One Free!
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
      style="width: 33%;"
    >
      <a
        class="tilecontainer"
        href="https://www.bbc.co.uk"
        style="border-radius: 4px;"
      >
        <div
          class="gradiantoverlay"
          style="border-radius: 4px;"
        >
          <div
            class="topwrapper"
          >
            <img
              alt="crosssell-image"
              class="imagecontainer"
              src="https://picsum.photos/536/354"
              style="border-radius: 4px;"
            />
          </div>
          <div
            class="bottomwrapper"
          >
            <div
              class="textwrapper"
              style="color: white; font-size: 3vw;"
            >
              Buy One - Get One Free!
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
